<resources>
    <string name="toggle_orientation">Toggle Orientation Lock</string>
    <string name="toggle_torch">Toggle Flashlight</string>
    <string name="app_name">Boardgame Inventory</string>
    <string name="main_title">Board Game Tracker</string>
    <string name="add_game">Add Game by Barcode</string>
    <string name="bulk_upload">Bulk Upload</string>
    <string name="loan_game">Loan Game</string>
    <string name="return_game">Return Game</string>
    <string name="list_games">List Games</string>
    <string name="delete_game">Delete Game</string>
    <string name="export_games">Export CSV/Excel</string>
    <string name="import_games">Import CSV/Excel</string>
    <string name="export_import_games">Export/Import Games</string>
    <string name="version_info">Board Game Inventory v%1$s (%2$d)</string>
    <string name="add_game_title">Add Game by Barcode</string>
    <string name="barcode_hint">Enter or scan barcode</string>
    <string name="location_barcode_hint">Location Barcode (e.g., A-1)</string>
    <string name="bookcase_hint">Bookcase</string>
    <string name="shelf_hint">Shelf</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="select_image">Select Image</string>
    <string name="update_image">Update Image</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="game_list_title">Game List</string>
    <string name="available_games">Available Games</string>
    <string name="loaned_games">Loaned Games</string>
    <string name="no_games">No games found</string>
    <string name="game_details">Game Details</string>
    <string name="search_games">Search games…</string>
    <string name="filter_games">Filter games</string>
    <string name="clear_search">Clear search</string>
    <string name="filter_by_location">Location</string>
    <string name="filter_by_bookcase">Bookcase</string>
    <string name="filter_by_date">Date Added</string>
    <string name="filter_by_date_range">Filter by Date Range</string>
    <string name="clear_filters">Clear Filters</string>
    <string name="filter_options">Filter Options</string>
    <string name="select_bookcase">Select Bookcase</string>
    <string name="select_date_range">Select Date Range</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="sort_by">Sort By</string>
    <string name="sort_by_name">Name</string>
    <string name="sort_by_date_added">Date Added</string>
    <string name="sort_by_bookcase">Bookcase</string>
    <string name="all_bookcases">All Bookcases</string>
    <string name="settings">Settings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="app_information">App Information</string>
    <string name="legal_privacy">Legal &amp; Privacy</string>
    <string name="game_detail_title">Game Details</string>
    <string name="game_image">Game Image</string>
    <string name="barcode_label">Barcode:</string>
    <string name="location_label">Location:</string>
    <string name="loaned_to_label">Loaned to:</string>
    <string name="date_added_label">Date Added:</string>
    <string name="description_label">Description</string>
    <string name="no_description_available">No description available</string>
    <string name="edit_game">Edit Game</string>
    <string name="loaned_to">Loaned to: %s</string>
    <string name="location" formatted="false">Location: %s, Shelf %s</string>
    <string name="date_added">Added: %s</string>
    <string name="date_loaned">Loaned: %s</string>
    <string name="no_description">No description available</string>
    <string name="no_image">No image available</string>
    <string name="loan_game_title">Loan Game</string>
    <string name="loan_game_instructions">Select a game from the list below and enter the borrower\'s name</string>
    <string name="no_games_available_to_loan">No games available to loan</string>
    <string name="selected_game_format" formatted="false">Selected: %s (%s)</string>
    <string name="borrower_name">Borrower\'s Name</string>
    <string name="no_game_selected">No game selected</string>
    <string name="error_borrower_name_required">Borrower\'s name is required</string>
    <string name="error_no_game_selected">Please select a game to loan</string>
    <string name="game_loaned_success" formatted="false">Game \'%s\' loaned to %s successfully</string>
    <string name="error_loan_game">Failed to loan game: %s</string>
    <string name="error_game_already_loaned">Game is already loaned to %s</string>
    <string name="error_game_not_found_barcode">Game with barcode %s not found</string>
    <string name="error_finding_game">Error finding game: %s</string>
    <string name="select_game">Select Game</string>
    <string name="person_name_hint">Person\'s name</string>
    <string name="loan">Loan</string>
    <string name="borrower_name_hint">Borrower Name</string>
    <string name="game_barcode_hint">Game Barcode</string>
    <string name="scan_game_barcode_description">Scan the barcode of the game to loan</string>
    <string name="loan_game_action_description">Loan the selected game to the borrower</string>
    <string name="cancel_loan_description">Cancel the loan process</string>
    <string name="selected_game_description">Selected game details</string>
    <string name="game_selected_announcement">Game selected: %1$s</string>
    <string name="return_game_title">Return Game</string>
    <string name="return_btn">Return</string>
    <string name="update_location">Update Location</string>
    <string name="return_game_instructions">Select a loaned game from the list below to return it</string>
    <string name="no_games_loaned_out">No games are currently loaned out</string>
    <string name="update_location_optional">Update Location (Optional)</string>
    <string name="location_barcode_format">Format: XX-XX (Bookcase-Shelf)</string>
    <string name="bookcase">Bookcase</string>
    <string name="shelf">Shelf</string>
    <string name="notification_group_game_management">Game Management</string>
    <string name="notification_group_data_operations">Data Operations</string>
    <string name="channel_loans_name">Game Loans</string>
    <string name="channel_loans_description">Notifications about loaned games and loan reminders</string>
    <string name="channel_updates_name">Game Updates</string>
    <string name="channel_updates_description">Notifications about game updates and collection changes</string>
    <string name="channel_imports_name">Import &amp; Export</string>
    <string name="channel_imports_description">Notifications about importing and exporting game data</string>
    <string name="channel_sync_name">Synchronization</string>
    <string name="channel_sync_description">Notifications about data synchronization operations</string>
    <string name="update_ready_to_install">An update has been downloaded and is ready to install</string>
    <string name="update_downloading">Downloading update: %d%%</string>
    <string name="update_failed">Update failed: %s</string>
    <string name="restart">Restart</string>
    <string name="update_available">Update Available</string>
    <string name="update_now">Update Now</string>
    <string name="later">Later</string>
    <string name="check_for_updates">Check for Updates</string>
    <string name="main_screen_content">Board Game Inventory main screen</string>
    <string name="description_hint">Enter a description</string>
    <string name="main_title_description">Board Game Tracker heading</string>
    <string name="stats_card_description">Collection statistics</string>
    <string name="total_games_description">Total number of games in collection</string>
    <string name="loaned_games_description">Number of games currently loaned out</string>
    <string name="available_games_description">Number of games currently available</string>
    <string name="add_game_description">Add a new game using barcode scanning</string>
    <string name="bulk_upload_description">Add multiple games at once</string>
    <string name="list_games_description">View your full game collection</string>
    <string name="loan_game_description">Record loaning a game to someone</string>
    <string name="return_game_description">Record returning a loaned game</string>
    <string name="export_import_games_description">Export or import your game collection</string>
    <string name="settings_description">Open application settings</string>
    <string name="version_info_description">Application version information</string>
    <string name="ad_container_description">Advertisement area</string>
    <string name="game_image_description">Game box image</string>
    <string name="game_options_menu">Game options menu</string>
    <string name="loan_status_description">Loan status information</string>
    <string name="camera_permission_rational">Camera access is needed to scan barcodes</string>
    <string name="storage_permission_rational">Storage access is needed to import and export data</string>
    <string name="error_screen_reader">Error. %s</string>
    <string name="success_screen_reader">Success. %s</string>
    <string name="contrast_check_title">Accessibility Contrast Check</string>
    <string name="contrast_check_no_issues">Great! No contrast issues found.</string>
    <string name="contrast_check_issues_found">Found %d text elements with insufficient contrast.</string>
    <string name="fix_all_issues">Fix All Issues</string>
    <string name="contrast_fixed_title">Contrast Issues Fixed</string>
    <string name="contrast_fixed_message">Fixed %d contrast issues. The changes are temporary and will be lost when you restart the app.</string>
    <string name="run_contrast_check">Check Contrast Ratios</string>
    <string name="accessibility_test_mode">Accessibility Test Mode</string>
    <string name="summary_text">Checked %1$d elements across %2$d activities. Found %3$d issues (%4$s%%).</string>
    <string name="bulk_upload_title">Bulk Upload Games</string>
    <string name="scanned_barcodes">Scanned Barcodes:</string>
    <string name="scan_each_game">Scan each game barcode below:</string>
    <string name="done">Done</string>
    <string name="scanned_barcodes_count">Scanned: %1$d barcodes</string>
    <string name="export_title">Export Games</string>
    <string name="import_title">Import Games</string>
    <string name="export_csv">Export as CSV</string>
    <string name="export_excel">Export as Excel</string>
    <string name="import_csv">Import from CSV</string>
    <string name="import_excel">Import from Excel</string>
    <string name="overwrite_database">Overwrite Database?</string>
    <string name="overwrite_message">Do you want to overwrite the entire database with this import? (Yes = Overwrite, No = Add)</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="warning">Warning</string>
    <string name="confirm">Confirm</string>
    <string name="barcode_required">Barcode is required</string>
    <string name="location_required">Bookcase and Shelf are required</string>
    <string name="person_name_required">Person\'s name is required</string>
    <string name="no_data_found">No data found for that barcode</string>
    <string name="game_added">Game \'%s\' added successfully</string>
    <string name="game_loaned">Game loaned to %s</string>
    <string name="game_returned">Game returned successfully</string>
    <string name="game_returned_success">Game \'%s\' returned successfully</string>
    <string name="total_games">Total Games: %d</string>
    <string name="loaned_count">Loaned: %d</string>
    <string name="available_count">Available: %d</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
</resources>