<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_loan"
        android:title="@string/loan"
        app:showAsAction="never"
        android:titleTextAppearance="@style/DarkMenuText" />

    <item
        android:id="@+id/action_return"
        android:title="@string/return_btn"
        app:showAsAction="never"
        android:titleTextAppearance="@style/DarkMenuText" />

    <item
        android:id="@+id/action_edit"
        android:title="@string/edit"
        app:showAsAction="never"
        android:titleTextAppearance="@style/DarkMenuText" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/delete"
        app:showAsAction="never"
        android:titleTextAppearance="@style/DarkMenuText" />

</menu>
